change that bottom navigation flow

--- a/presentation/src/main/res/navigation/home_nav.xml
+++ b/presentation/src/main/res/navigation/home_nav.xml
@@ -9,10 +9,32 @@
         tools:layout="@layout/fragment_home"
         android:id="@+id/home_fragment"
         android:name="kr.foorun.uni_eat.feature.home.HomeFragment"
-        android:label="HomeFragment"/>
+        android:label="HomeFragment">
+    </fragment>
 
     <include app:graph="@navigation/article_nav" />
     <include app:graph="@navigation/event_nav" />
     <include app:graph="@navigation/my_nav" />
     <include app:graph="@navigation/map_nav" />
+
+    <action
+        android:id="@+id/action_home_fragment_to_my_nav"
+        app:popUpTo="@id/home_fragment"
+        app:popUpToInclusive="false"
+        app:destination="@id/my_nav" />
+    <action
+        android:id="@+id/action_home_fragment_to_map_nav"
+        app:popUpTo="@id/home_fragment"
+        app:popUpToInclusive="false"
+        app:destination="@id/map_nav" />
+    <action
+        android:id="@+id/action_home_fragment_to_event_nav"
+        app:popUpTo="@id/home_fragment"
+        app:popUpToInclusive="false"
+        app:destination="@id/event_nav" />
+    <action
+        android:id="@+id/action_home_fragment_to_article_nav"
+        app:popUpTo="@id/home_fragment"
+        app:popUpToInclusive="false"
+        app:destination="@id/article_nav" />
 </navigation>
