--- a/presentation/src/main/res/layout/base_information.xml
+++ b/presentation/src/main/res/layout/base_information.xml
@@ -17,8 +17,7 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textSize="15sp" />
+            android:layout_height="wrap_content" />
 
         <kr.foorun.uni_eat.base.view.base.base_layout.BaseTextView
             android:id="@+id/information_value"
@@ -26,15 +25,13 @@
             app:layout_constraintTop_toTopOf="parent"
             android:visibility="gone"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textSize="15sp" />
+            android:layout_height="wrap_content" />
 
         <kr.foorun.uni_eat.base.view.base.base_layout.BaseImageView
             android:id="@+id/information_image"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            android:src="@drawable/drop_down_arrow"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content" />
     </androidx.constraintlayout.widget.ConstraintLayout>
