--- a/presentation/src/main/res/values/attrs_base_information.xml
+++ b/presentation/src/main/res/values/attrs_base_information.xml
@@ -5,5 +5,8 @@
         <attr name="show_arrow" format="boolean"/>
         <attr name="information" format="string|reference"/>
         <attr name="value" format="string|reference"/>
+        <attr name="android:textStyle"/>
+        <attr name="android:src"/>
+        <attr name="android:textSize"/>
     </declare-styleable>
 </resources>
