add kakao logout and change navigation flow

--- a/presentation/src/main/res/layout/fragment_my_page_more.xml
+++ b/presentation/src/main/res/layout/fragment_my_page_more.xml
@@ -28,6 +28,7 @@
             android:id="@+id/profile"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:onClick="@{() -> viewModel.profileClicked()}"
             app:information="@string/edit_profile"
             app:show_arrow="true"
             android:src="@drawable/arrow_right"
@@ -43,6 +44,7 @@
             android:layout_height="wrap_content"
             app:information="@string/edit_account"
             app:show_arrow="true"
+            android:onClick="@{() -> viewModel.accountClicked()}"
             android:src="@drawable/arrow_right"
             android:textColor="@color/black"
             android:textSize="@dimen/article_text_small_19"
@@ -62,6 +64,7 @@
             android:id="@+id/notice"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:onClick="@{() -> viewModel.noticeClicked()}"
             app:information="@string/notice"
             app:show_arrow="true"
             android:src="@drawable/arrow_right"
@@ -75,6 +78,7 @@
             android:id="@+id/service_info"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:onClick="@{() -> viewModel.serviceInfoClicked()}"
             app:information="@string/service_info"
             app:show_arrow="true"
             android:src="@drawable/arrow_right"
@@ -88,6 +92,7 @@
             android:id="@+id/service_term"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:onClick="@{() -> viewModel.serviceTermClicked()}"
             app:information="@string/service_terms"
             app:show_arrow="true"
             android:src="@drawable/arrow_right"
@@ -101,6 +106,7 @@
             android:id="@+id/private_term"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:onClick="@{() -> viewModel.privateClicked()}"
             app:information="@string/privacy_policy"
             app:show_arrow="true"
             android:src="@drawable/arrow_right"
@@ -114,6 +120,7 @@
             android:id="@+id/location"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:onClick="@{() -> viewModel.locationClicked()}"
             app:information="@string/location_terms"
             app:show_arrow="true"
             android:src="@drawable/arrow_right"
@@ -127,6 +134,7 @@
             android:id="@+id/inquiry"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:onClick="@{() -> viewModel.inquireClicked()}"
             app:information="@string/inquiry"
             app:show_arrow="true"
             android:src="@drawable/arrow_right"
