--- a/presentation/src/main/res/layout/fragment_event_detail.xml
+++ b/presentation/src/main/res/layout/fragment_event_detail.xml
@@ -3,6 +3,11 @@
     xmlns:tools="http://schemas.android.com/tools">
 
     <data>
+
+        <variable
+            name="event"
+            type="kr.foorun.model.event.Event" />
+
         <variable
             name="viewModel"
             type="kr.foorun.uni_eat.feature.event.event_detail.EventDetailViewModel" />
@@ -14,22 +19,131 @@
         android:background="@color/white"
         tools:context="kr.foorun.uni_eat.feature.event.event_detail.EventDetailFragment">
 
-       <kr.foorun.uni_eat.base.view.base.BaseBarConstraintView
-           android:layout_width="match_parent"
-           android:layout_height="wrap_content"
-           app:titleText="@string/event"
-           app:layout_constraintTop_toTopOf="parent"/>
-
-        <kr.foorun.uni_eat.base.view.base.BaseTextView
-            android:id="@+id/event_detail_TV"
+        <kr.foorun.uni_eat.base.view.base.BaseImageView
+            android:id="@+id/event_detail_front_IV"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginStart="21dp"
+            android:layout_marginTop="73dp"
+            android:onClick="@{() -> viewModel.backClicked()}"
+            android:src="@drawable/arrow_left"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
+        <kr.foorun.uni_eat.base.view.base.BaseTextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="42dp"
+            android:layout_marginTop="64dp"
+            android:text="@string/event"
             android:textSize="23sp"
             android:textStyle="bold"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintBottom_toBottomOf="parent"/>
+            app:layout_constraintTop_toTopOf="parent" />
 
+        <ScrollView
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_marginTop="9dp"
+            android:layout_marginBottom="16dp"
+            android:fillViewport="true"
+            app:layout_constraintBottom_toTopOf="@id/event_detail_use_coupon_BTN"
+            app:layout_constraintTop_toBottomOf="@id/event_detail_front_IV">
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginHorizontal="21dp"
+                android:layout_marginTop="16dp"
+                android:orientation="vertical">
+
+                <kr.foorun.uni_eat.base.view.base.BaseImageView
+                    android:id="@+id/event_detail_IV"
+                    android:layout_width="match_parent"
+                    android:layout_height="501dp"
+                    android:layout_gravity="center"
+                    android:src="@color/black_60" />
+
+                <kr.foorun.uni_eat.base.view.base.BaseTextView
+                    android:id="@+id/event_detail_title_TV"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="16dp"
+                    android:letterSpacing="-0.05"
+                    android:text="노랑통닭 2000원 할인 쿠폰"
+                    android:textSize="25sp"
+                    android:textStyle="bold" />
+
+                <kr.foorun.uni_eat.base.view.base.BaseImageView
+                    android:id="@+id/event_detail_line"
+                    android:layout_width="match_parent"
+                    android:layout_height="0.5dp"
+                    android:layout_marginTop="10dp"
+                    android:scaleType="fitXY"
+                    android:src="@drawable/black_line" />
+
+                <kr.foorun.uni_eat.base.view.base.BaseTextView
+                    android:id="@+id/event_detail_duration_TV"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="bottom"
+                    android:layout_marginTop="10dp"
+                    android:letterSpacing="-0.05"
+                    android:text="이벤트 기간 : 12.12.12 ~ 12.12.12"
+                    android:textColor="@color/red"
+                    android:textSize="15sp" />
+
+                <kr.foorun.uni_eat.base.view.base.BaseTextView
+                    android:id="@+id/event_detail_shopName_TV"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="bottom"
+                    android:layout_marginTop="10dp"
+                    android:text="[노랑통닭 수원점]"
+                    android:textSize="15sp" />
+
+                <kr.foorun.uni_eat.base.view.base.BaseTextView
+                    android:id="@+id/event_detail_discription_TV"
+                    android:layout_width="330.86dp"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="bottom"
+                    android:layout_marginTop="10dp"
+                    android:text="Lorem ipsum dolor sit amet, consectetur adipiscing elit. Dolor a eget maecenas ultricies. Mattis eget pretium libero sed faucibus pellentesque cursus vitae."
+                    android:textSize="15sp" />
+
+                <kr.foorun.uni_eat.base.view.base.BaseTextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="bottom"
+                    android:layout_marginTop="23dp"
+                    android:letterSpacing="-0.05"
+                    android:text="이벤트 유의사항"
+                    android:textColor="@color/gray5"
+                    android:textSize="13sp" />
+
+                <kr.foorun.uni_eat.base.view.base.BaseTextView
+                    android:id="@+id/event_detail_notice_TV"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="bottom"
+                    android:layout_marginTop="10dp"
+                    android:layout_marginBottom="38.05dp"
+                    android:letterSpacing="-0.05"
+                    android:text="· Lorem ipsum dolor sit\n· Lorem ipsum dolor sit"
+                    android:textSize="13sp" />
+            </LinearLayout>
+        </ScrollView>
+
+        <Button
+            android:id="@+id/event_detail_use_coupon_BTN"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginHorizontal="17dp"
+            android:layout_marginBottom="36.36dp"
+            android:background="@drawable/radius_black_24"
+            android:text="@string/use_coupon"
+            android:textColor="@color/white"
+            android:textSize="15sp"
+            app:layout_constraintBottom_toBottomOf="parent" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
