--- a/presentation/src/main/res/layout/item_event_left.xml
+++ b/presentation/src/main/res/layout/item_event_left.xml
@@ -4,9 +4,6 @@
 
     <data>
         <variable
-            name="position"
-            type="Integer" />
-        <variable
             name="event"
             type="kr.foorun.model.event.Event" />
 
@@ -18,7 +15,7 @@
     <FrameLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:onClick="@{()->viewModel.onItemClick(position)}">
+        android:onClick="@{()->viewModel.onItemClick(event)}">
 
         <kr.foorun.uni_eat.base.view.base.BaseImageView
             android:id="@+id/event_item_IV"
