--- a/presentation/src/main/res/navigation/event_nav.xml
+++ b/presentation/src/main/res/navigation/event_nav.xml
@@ -17,14 +17,14 @@
         android:id="@+id/eventDetailFragment"
         android:name="kr.foorun.uni_eat.feature.event.event_detail.EventDetailFragment"
         android:label="EventDetailFragment" >
-        <argument
-            android:name="eventIndex"
-            app:argType="integer"
-            android:defaultValue="0"/>
+
         <argument
             android:name="@string/hide_bottom"
             app:argType="boolean"
             android:defaultValue="true" />
+        <argument
+            android:name="event"
+            app:argType="kr.foorun.model.event.Event" />
     </fragment>
 
 </navigation>
