--- a/presentation/src/main/res/layout/fragment_event_detail.xml
+++ b/presentation/src/main/res/layout/fragment_event_detail.xml
@@ -4,8 +4,8 @@
 
     <data>
         <variable
-            name="event"
-            type="kr.foorun.model.event.Event" />
+            name="eventCoupon"
+            type="kr.foorun.model.event.EventCoupon" />
 
         <variable
             name="viewModel"
@@ -49,7 +49,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="501dp"
                     android:layout_gravity="center"
-                    app:glide="@{event.image}" />
+                    app:glide="@{eventCoupon.image}" />
 
                 <kr.foorun.uni_eat.base.view.base.BaseTextView
                     android:id="@+id/event_detail_title_TV"
@@ -57,7 +57,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginTop="16dp"
                     android:letterSpacing="-0.05"
-                    android:text="@{event.name}"
+                    android:text="@{eventCoupon.name}"
                     android:textSize="25sp"
                     android:textStyle="bold" />
 
@@ -76,7 +76,7 @@
                     android:layout_gravity="bottom"
                     android:layout_marginTop="10dp"
                     android:letterSpacing="-0.05"
-                    android:text="@{`이벤트 기간 `+event.startDate+` ~ `+event.endDate}"
+                    android:text="@{`이벤트 기간 `+eventCoupon.startDate+` ~ `+eventCoupon.endDate}"
                     android:textColor="@color/red"
                     android:textSize="15sp" />
 
@@ -86,7 +86,7 @@
                     android:layout_height="wrap_content"
                     android:layout_gravity="bottom"
                     android:layout_marginTop="10dp"
-                    android:text="@{ '[' +event.shopName+ ']' }"
+                    android:text="@{ '[' +eventCoupon.shopName+ ']' }"
                     android:textSize="15sp" />
 
                 <kr.foorun.uni_eat.base.view.base.BaseTextView
@@ -95,7 +95,7 @@
                     android:layout_height="wrap_content"
                     android:layout_gravity="bottom"
                     android:layout_marginTop="10dp"
-                    android:text="@{event.discription}"
+                    android:text="@{eventCoupon.discription}"
                     android:textSize="15sp" />
 
                 <kr.foorun.uni_eat.base.view.base.BaseTextView
@@ -116,7 +116,7 @@
                     android:layout_marginTop="10dp"
                     android:layout_marginBottom="38.05dp"
                     android:letterSpacing="-0.05"
-                    android:text="@{event.Notice}"
+                    android:text="@{eventCoupon.Notice}"
                     android:textSize="13sp" />
         <Button
             android:id="@+id/event_detail_use_coupon_BTN"
