--- a/presentation/src/main/res/layout/fragment_event.xml
+++ b/presentation/src/main/res/layout/fragment_event.xml
@@ -26,7 +26,7 @@
                 android:layout_height="wrap_content"
                 android:layout_gravity="top|center"
                 android:alpha="0"
-                app:titleText="@string/event"/>
+                app:titleText="@string/event" />
 
             <androidx.core.widget.NestedScrollView
                 android:id="@+id/event_NSV"
@@ -35,9 +35,11 @@
                 android:fillViewport="true">
 
                 <LinearLayout
+                    android:id="@+id/event_clickedEvent_LL"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:background="@color/white"
+                    android:onClick="@{()->viewModel.clickedEventPage()}"
                     android:orientation="vertical"
                     tools:context=".feature.event.EventFragment">
 
@@ -79,13 +81,28 @@
                             android:src="@drawable/arrow_down" />
                     </LinearLayout>
 
-                    <androidx.recyclerview.widget.RecyclerView
-                        android:id="@+id/event_RV"
+                    <androidx.constraintlayout.widget.ConstraintLayout
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:layout_gravity="bottom"
-                        android:layout_marginTop="40dp"
-                        android:nestedScrollingEnabled="false" />
+                        android:layout_marginTop="40dp">
+
+                        <View
+                            android:id="@+id/event_View"
+                            android:layout_width="match_parent"
+                            android:layout_height="0dp"
+                            app:layout_constraintTop_toTopOf="parent"
+                            android:visible="false"
+                            app:layout_constraintBottom_toBottomOf="@id/event_RV"
+                            android:onClick="@{()->viewModel.clickedEventPage()}"/>
+
+                        <androidx.recyclerview.widget.RecyclerView
+                            android:id="@+id/event_RV"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:layout_gravity="bottom"
+                            android:nestedScrollingEnabled="false"
+                            app:layout_constraintTop_toTopOf="parent"/>
+                    </androidx.constraintlayout.widget.ConstraintLayout>
                 </LinearLayout>
             </androidx.core.widget.NestedScrollView>
         </FrameLayout>
