--- a/presentation/src/main/res/layout/item_event_left.xml
+++ b/presentation/src/main/res/layout/item_event_left.xml
@@ -24,6 +24,18 @@
             android:scaleType="fitXY"
             app:glide="@{eventCoupon.image}" />
 
+        <kr.foorun.uni_eat.base.view.base.base_layout.BaseImageView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:src="@drawable/white_semicircle_right"
+            android:layout_gravity="start|center"/>
+
+        <kr.foorun.uni_eat.base.view.base.base_layout.BaseImageView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:src="@drawable/white_semicircle_left"
+            android:layout_gravity="end|center"/>
+
         <kr.foorun.uni_eat.base.view.base.base_layout.BaseTextView
             android:id="@+id/event_title_TV"
             android:layout_width="wrap_content"
